--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -9,17 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import robotic as ry\n",
-    "import time"
+    "import time\n",
+    "max_trials = 10\n",
+    "max_vel = 100\n",
+    "max_acc = max_vel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +55,9 @@
     "# C.getFrameNames()\n",
     "# qHome = C.getJointState()\n",
     "# print(qHome)\n",
-    "# print(C.getFrameNames())"
+    "# print(C.getFrameNames())\n",
+    "\n",
+    "# komo_1.get"
    ]
   },
   {
@@ -64,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -85,13 +90,14 @@
     "komo_1.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e-1])\n",
     "komo_1.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
     "\n",
+    "\n",
     "# move the gripper to the cargo position\n",
     "komo_1.addObjective(\n",
     "    times=[],\n",
     "    feature=ry.FS.positionDiff,\n",
     "    frames=[\"l_gripper\", \"cargo_handle\"],\n",
     "    type=ry.OT.eq,\n",
-    "    scale=[1e1]\n",
+    "    scale=[1e2],\n",
     ")\n",
     "\n",
     "# komo_1.addObjective(\n",
@@ -104,10 +110,9 @@
     "\n",
     "# align the grippper with the cargo_handle\n",
     "komo_1.addObjective([], ry.FS.scalarProductXZ, ['l_gripper', 'cargo_handle'], ry.OT.eq, [1e1])\n",
-    "# komo_1.addObjective([], ry.FS.scalarProductXY, ['l_panda_base', 'cargo_handle'], ry.OT.eq, [1e1])\n",
+    "komo_1.addObjective([], ry.FS.scalarProductYZ, ['l_panda_base', 'cargo_handle'], ry.OT.eq, [1e0])\n",
     "\n",
-    "\n",
-    "\n",
+    "# solve\n",
     "ret_1 = ry.NLP_Solver(komo_1.nlp(), verbose=0 ) .solve()\n",
     "q_gripper_to_cargo = komo_1.getPath()\n",
     "\n",
@@ -116,7 +121,8 @@
     "#     C.view(False, f'waypoint {t}')\n",
     "#     time.sleep(0.1)\n",
     "\n",
-    "# C.view()\n",
+    "# komo_1.view_play(False, 2)\n",
+    "\n",
     "if ret_1.feasible:\n",
     "    print(\"KOMO_1 is feasible\")\n",
     "else:\n",
@@ -132,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +150,8 @@
     }
    ],
    "source": [
+    "C.setJointState(qHome)\n",
+    "\n",
     "komo_2 = ry.KOMO(C, phases=1, slicesPerPhase=20, kOrder=1, enableCollisions=False)\n",
     "# komo = ry.KOMO()\n",
     "# komo_2.setConfig(C, True)\n",
@@ -154,6 +162,7 @@
     "\n",
     "# add collision constraints\n",
     "komo_2.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq)\n",
+    "komo_2.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
     "\n",
     "# Add objective to move cargo to goal area\n",
     "komo_2.addObjective(\n",
@@ -163,9 +172,17 @@
     "    type=ry.OT.sos\n",
     ")\n",
     "\n",
+    "komo_2.addObjective(\n",
+    "    times=[0., 1.],\n",
+    "    feature=ry.FS.positionDiff,\n",
+    "    frames=[\"l_gripper\", \"goal_area\"],\n",
+    "    type=ry.OT.sos,\n",
+    "    target=[0, .6, .46]\n",
+    ")\n",
+    "\n",
+    "\n",
     "ret_2 = ry.NLP_Solver(komo_2.nlp(), verbose=0 ) .solve()\n",
     "q_cargobot_to_goal_area = komo_2.getPath()\n",
-    "\n",
     "\n",
     "\n",
     "# for t in range(q_cargobot_to_goal_area.shape[0]):\n",
@@ -188,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +223,10 @@
     "#     C.view(False, f'waypoint {t}')\n",
     "#     time.sleep(0.1)\n",
     "    \n",
-    "# for t in range(q_cargobot_to_goal_area.shape[0]):\n",
-    "#     C.setJointState(q_cargobot_to_goal_area[t])\n",
-    "#     C.view(False, f'waypoint {t}')\n",
-    "#     time.sleep(0.1)\n",
+    "for t in range(q_cargobot_to_goal_area.shape[0]):\n",
+    "    C.setJointState(q_cargobot_to_goal_area[t])\n",
+    "    C.view(False, f'waypoint {t}')\n",
+    "    time.sleep(0.1)\n",
     "\n",
     "# C.setJointState(qHome)\n",
     "# C.view()\n",
@@ -237,27 +254,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "*** Found path at trial num # 1  ***\n"
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- *** Found path at trial num # 5  ***\n",
+      "RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n"
      ]
     }
    ],
    "source": [
     "ry.params_clear()\n",
-    "ry.params_add({'rrt/stepsize':.5, 'rrt/verbose': 0}) #verbose=3 makes it very slow, and displays result, and verbose=4 waits keypress..\n",
+    "ry.params_add({'rrt/stepsize':.1, 'rrt/verbose': 0}) #verbose=3 makes it very slow, and displays result, and verbose=4 waits keypress..\n",
     "\n",
     "foundRRTPath = False\n",
     "numOfTrials = 0\n",
@@ -265,40 +290,19 @@
     "C.setJointState(qHome)\n",
     "\n",
     "\n",
-    "while (not foundRRTPath and numOfTrials < 15):\n",
+    "while (not foundRRTPath and numOfTrials < max_trials):\n",
     "  rrt = ry.PathFinder()\n",
     "  rrt.setProblem(C, [qHome], [q_gripper_to_cargo[0]])\n",
     "  ret_RRT_1 = rrt.solve()\n",
-    "  path = ret_RRT_1.x\n",
+    "  path_1 = ret_RRT_1.x\n",
     "  foundRRTPath = ret_RRT_1.feasible\n",
     "  numOfTrials = numOfTrials + 1\n",
     "  # print(\"*** Trial num #\", numOfTrials, \" result: \", foundRRTPath)\n",
     "  \n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "\n",
     "if foundRRTPath:\n",
     "  print(\"*** Found path at trial num #\", numOfTrials, \" ***\")\n",
     "else:\n",
     "  print(\"** No path found ***\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# display the path\n",
-    "for t in range(0, path.shape[0]-1):\n",
-    "    C.setJointState(path[t])\n",
-    "    C.view()\n",
-    "    time.sleep(.1)"
    ]
   },
   {
@@ -310,20 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:257(0) initializing with infeasible q0:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
       "*** Found path at trial num # 1  ***\n"
      ]
     }
@@ -337,22 +336,15 @@
     "\n",
     "C.setJointState(q_gripper_to_cargo[0])\n",
     "\n",
-    "while (not foundRRTPath and numOfTrials < 25):\n",
+    "while (not foundRRTPath and numOfTrials < max_trials):\n",
     "  rrt = ry.PathFinder()\n",
     "  rrt.setProblem(C, [q_gripper_to_cargo[0]], [q_cargobot_to_goal_area[0]])\n",
     "  ret_RRT_2 = rrt.solve()\n",
-    "  path = ret_RRT_2.x\n",
+    "  path_2 = ret_RRT_2.x\n",
     "  foundRRTPath = ret_RRT_2.feasible\n",
     "  numOfTrials = numOfTrials + 1\n",
     "  # print(\"*** Trial num #\", numOfTrials, \" result: \", foundRRTPath)\n",
     "  \n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
-    "print()\n",
     "\n",
     "if foundRRTPath:\n",
     "  print(\"*** Found path at trial num #\", numOfTrials, \" ***\")\n",
@@ -361,29 +353,127 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 162,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# display the path\n",
-    "for t in range(0, path.shape[0]-1):\n",
-    "    C.setJointState(path[t])\n",
-    "    C.view()\n",
-    "    time.sleep(.1)"
+    "### 1.2 Part B: Visualisation of RRT pathfinding (KOMO_1) and (KOMO_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# C.attach(\"l_gripper\", \"cargo_handle\")\n",
-    "# del komo\n",
-    "# C.getFrame(\"base_origin\").setPosition([1.7, -1.6, 0.1])\n",
-    "# C.getFrame(\"base_origin\").setQuaternion([1, 0, 0, 0])\n",
-    "# C.view()"
+    "# display the path\n",
+    "sleepTime = 0.05\n",
+    "for t in range(0, path_1.shape[0]-1):\n",
+    "    C.setJointState(path_1[t])\n",
+    "    C.view()\n",
+    "    time.sleep(sleepTime)\n",
+    "    \n",
+    "# display the path\n",
+    "for t in range(0, path_2.shape[0]-1):\n",
+    "    C.setJointState(path_2[t])\n",
+    "    C.view()\n",
+    "    time.sleep(sleepTime)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Part C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C.setJointState(qHome)\n",
+    "\n",
+    "for t in range(0, path_1.shape[0]-1):\n",
+    "    C.setJointState(path_1[t])\n",
+    "    C.view()\n",
+    "    time.sleep(sleepTime)\n",
+    "    \n",
+    "C.attach(\"l_gripper\", \"cargo_handle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  -- rrt success: queries:3198 tree sizes: 267 239\n",
+      "*** Found path at trial num # 1  ***\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Need to find new RRT path 2 with cargo attached, b/c current one would make the cargo hit the walls (i.e. from cargo position to goal area)\n",
+    "\n",
+    "ry.params_clear()\n",
+    "ry.params_add({'rrt/stepsize':.1, 'rrt/verbose': 1}) #verbose=3 makes it very slow, and displays result, and verbose=4 waits keypress..\n",
+    "\n",
+    "foundRRTPath = False\n",
+    "numOfTrials = 0\n",
+    "\n",
+    "# C.setJointState(q_gripper_to_cargo[0])\n",
+    "\n",
+    "while (not foundRRTPath and numOfTrials < max_trials):\n",
+    "  rrt = ry.PathFinder()\n",
+    "  rrt.setProblem(C, [q_gripper_to_cargo[0]], [q_cargobot_to_goal_area[0]])\n",
+    "  ret_RRT_3 = rrt.solve()\n",
+    "  path_3 = ret_RRT_3.x\n",
+    "  foundRRTPath = ret_RRT_3.feasible\n",
+    "  numOfTrials = numOfTrials + 1\n",
+    "  # print(\"*** Trial num #\", numOfTrials, \" result: \", foundRRTPath)\n",
+    "  \n",
+    "\n",
+    "if foundRRTPath:\n",
+    "  print(\"*** Found path at trial num #\", numOfTrials, \" ***\")\n",
+    "else:\n",
+    "  print(\"** No path found ***\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t in range(0, path_3.shape[0]-1):\n",
+    "    C.setJointState(path_3[t])\n",
+    "    C.view()\n",
+    "    time.sleep(sleepTime)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<robotic._robotic.Frame at 0x7f3fb6839870>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C.getFrame(\"cargo_handle\").unLink()"
    ]
   }
  ],
