Finished generalised grasping KOMO, lol that was easy

--- a/hw2/hw2_q2.ipynb
+++ b/hw2/hw2_q2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "0"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,50 +76,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected object:  book4\n",
+      "Object orientation:  vertical\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# select an object randomly\n",
-    "# curObj = random.choice(objects)\n",
-    "# print(\"Selected object: \", curObj)\n",
-    "\n",
-    "curObj = \"book4\"\n",
+    "curObj = random.choice(objects)\n",
+    "print(\"Selected object: \", curObj)\n",
     "\n",
     "# color the selected object\n",
     "C.getFrame(curObj).setColor(selected_color)\n",
-    "C.view()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 413,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 413,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Reset config\n",
+    "\n",
+    "# determine orientation of object\n",
+    "obj_z_height = C.getFrame(curObj).getSize()[2]\n",
+    "obj_y_width = C.getFrame(curObj).getSize()[1]\n",
+    "obj_x_length = C.getFrame(curObj).getSize()[0]\n",
+    "\n",
+    "if min(obj_z_height, obj_y_width, obj_x_length) == obj_z_height:\n",
+    "  obj_orientation = \"horizontal\"\n",
+    "elif min(obj_z_height, obj_y_width, obj_x_length) == obj_y_width:\n",
+    "  obj_orientation = \"vertical\"\n",
+    "elif min(obj_z_height, obj_y_width, obj_x_length) == obj_x_length:\n",
+    "  obj_orientation = \"sideways\"\n",
+    "  \n",
+    "print(\"Object orientation: \", obj_orientation)\n",
+    "\n",
+    "\n",
     "komo = ry.KOMO()\n",
     "del komo\n",
     "C.setJointState(qHome)\n",
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -137,30 +138,53 @@
        "0"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
-    },
+    }
+   ],
+   "source": [
+    "# Reset config\n",
+    "# komo = ry.KOMO()\n",
+    "# del komo\n",
+    "# C.setJointState(qHome)\n",
+    "# C.view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n",
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n",
       "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "C.addFrame(\"visual\") .setPosition(C.getFrame(curObj).getPosition()) .setColor([1, 0, 0]) .setShape(ry.ST.marker, [0.5])\n",
-    "C.addFrame(\"visual_gripper_orig\")  .setShape(ry.ST.marker, [0.]).setPosition(gripper_orig_pos) .setQuaternion(gripper_orig_quat) .setColor([0, 1, 0])\n",
-    "C.addFrame(\"visual_gripper_final\") .setShape(ry.ST.marker, [0.3]) .setPosition(C.getFrame(\"l_gripper\").getPosition()) .setQuaternion(C.getFrame(\"l_gripper\").getQuaternion()) .setColor([1, 0, 0]) \n",
+    "# C.addFrame(\"visual_gripper_orig\")  .setShape(ry.ST.marker, [0.]).setPosition(gripper_orig_pos) .setQuaternion(gripper_orig_quat) .setColor([0, 1, 0])\n",
+    "C.addFrame(\"visual_gripper_final\") .setShape(ry.ST.marker, [0.3]) .setPosition(C.getFrame(\"l_gripper\").getPosition()) .setQuaternion(C.getFrame(\"l_gripper\").getQuaternion()) .setColor([0, 0, 0]) \n",
     "C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,32 +199,33 @@
     "komo.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
     "komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e0], qHome)\n",
     "\n",
-    "\n",
-    "# # move the gripper to the cargo position\n",
+    "# calculate gripper and cargo offset (-40% in x direction)\n",
+    "offset_x = -(C.getFrame(curObj) .getSize()[0] * 0.3)\n",
+    "# this objective moves the gripper close to the cargo\n",
     "komo.addObjective(\n",
     "    times=[],\n",
     "    feature=ry.FS.positionRel,\n",
-    "    frames=[\"l_gripper\", \"book4\"],\n",
+    "    frames=['l_gripper', curObj],\n",
     "    type=ry.OT.eq,\n",
     "    scale=[1e1],\n",
-    "    target=[-0.065, 0, 0]\n",
+    "    target=[offset_x, 0, 0]\n",
     ")\n",
-    "\n",
     "# this objective makes the gripper claws face the shelf objects \n",
     "komo.addObjective(\n",
     "    times=[0, 1], \n",
     "    feature=ry.FS.scalarProductXZ, \n",
-    "    frames=['book4', 'l_gripper'], \n",
+    "    frames=[curObj, 'l_gripper'], \n",
     "    type=ry.OT.eq, \n",
     "    scale=[1e1],\n",
     "    target=[-1]\n",
     ")\n",
     "\n",
+    "\n",
     "# these 3 objectives align the gripper claws aligned properly with the book\n",
     "komo.addObjective(\n",
     "    times=[0, 1], \n",
     "    feature=ry.FS.scalarProductXX, \n",
-    "    frames=['l_gripper', 'book4'], \n",
+    "    frames=['l_gripper', curObj], \n",
     "    type=ry.OT.eq, \n",
     "    scale=[1e1],\n",
     ")\n",
@@ -208,7 +233,7 @@
     "komo.addObjective(\n",
     "    times=[0, 1],\n",
     "    feature=ry.FS.scalarProductZZ, \n",
-    "    frames=['l_gripper', 'book4'], \n",
+    "    frames=['l_gripper', curObj], \n",
     "    type=ry.OT.eq, \n",
     "    scale=[1e1]\n",
     ")\n",
@@ -216,23 +241,56 @@
     "komo.addObjective(\n",
     "    times=[0, 1],\n",
     "    feature=ry.FS.scalarProductYY, \n",
-    "    frames=['l_gripper', 'book4'], \n",
+    "    frames=['l_gripper', curObj], \n",
     "    type=ry.OT.eq, \n",
     "    scale=[1e1]\n",
     ")\n",
     "\n",
-    "# this objective makes the gripper claws horizontal\n",
+    "# this objective makes the gripper claws vertical\n",
+    "\n",
     "# komo.addObjective(\n",
     "#     times=[0, 1],\n",
     "#     feature=ry.FS.scalarProductXY, \n",
-    "#     frames=['book4', 'l_gripper'], \n",
+    "#     frames=['l_gripper', curObj], \n",
     "#     type=ry.OT.eq, \n",
     "#     scale=[1e1],\n",
+    "#     target=[0]\n",
     "# )\n",
     "\n",
     "\n",
+    "if obj_orientation == \"vertical\":\n",
+    "    komo.addObjective(\n",
+    "        times=[0, 1],\n",
+    "        feature=ry.FS.scalarProductXY, \n",
+    "        frames=['l_gripper', curObj], \n",
+    "        type=ry.OT.eq, \n",
+    "        scale=[1e1],\n",
+    "        target=[1]\n",
+    "    )\n",
+    "elif obj_orientation == \"horizontal\":\n",
+    "    komo.addObjective(\n",
+    "        times=[0, 1],\n",
+    "        feature=ry.FS.scalarProductXY, \n",
+    "        frames=['l_gripper', curObj], \n",
+    "        type=ry.OT.eq, \n",
+    "        scale=[1e1],\n",
+    "        target=[0]\n",
+    "    )\n",
+    "    komo.addObjective(\n",
+    "        times=[0, 1],\n",
+    "        feature=ry.FS.scalarProductYY, \n",
+    "        frames=['l_gripper', curObj], \n",
+    "        type=ry.OT.eq, \n",
+    "        scale=[1e1],\n",
+    "        target=[1]\n",
+    "    )\n",
     "\n",
-    "# C.attach(\"l_gripper\", \"book4\")\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# C.attach('l_gripper', curObj)\n",
     "\n",
     "\n",
     "# solve\n",
