--- a/hw2/hw2_q2.ipynb
+++ b/hw2/hw2_q2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/robotic/rai-robotModels/\n",
-      "['world', 'world', 'table', 'l_panda_base', 'l_panda_link0', 'l_panda_link0_0', 'l_panda_joint1_origin', 'l_panda_joint1', 'l_panda_link1', 'l_panda_link1_0', 'l_panda_joint2_origin', 'l_panda_joint2', 'l_panda_link2', 'l_panda_link2_0', 'l_panda_joint3_origin', 'l_panda_joint3', 'l_panda_link3', 'l_panda_link3_0', 'l_panda_joint4_origin', 'l_panda_joint4', 'l_panda_link4', 'l_panda_link4_0', 'l_panda_joint5_origin', 'l_panda_joint5', 'l_panda_link5', 'l_panda_link5_0', 'l_panda_joint6_origin', 'l_panda_joint6', 'l_panda_link6', 'l_panda_link6_0', 'l_panda_joint7_origin', 'l_panda_joint7', 'l_panda_link7', 'l_panda_link7_0', 'l_panda_joint8_origin', 'l_panda_joint8', 'l_panda_link8', 'l_panda_hand_joint_origin', 'l_panda_hand_joint', 'l_panda_hand', 'l_panda_hand_0', 'l_panda_finger_joint1_origin', 'l_panda_finger_joint2_origin', 'l_panda_finger_joint1', 'l_panda_finger_joint2', 'l_panda_leftfinger', 'l_panda_rightfinger', 'l_panda_leftfinger_0', 'l_panda_rightfinger_0', 'l_panda_coll0', 'l_panda_coll1', 'l_panda_coll3', 'l_panda_coll5', 'l_panda_coll2', 'l_panda_coll4', 'l_panda_coll6', 'l_panda_coll7', 'l_gripper', 'l_palm', 'l_finger1', 'l_finger2', 'cameraTop', 'cameraWrist', 'panda_collCameraWrist', 'base', 'leg1', 'leg2', 'layer1', 'layer2', 'book1', 'book2', 'book-non', 'book3', 'book4', 'mug', 'mug-h1', 'mug-h2', 'mug-h3', 'goal']\n"
+      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/robotic/rai-robotModels/\n"
      ]
     }
    ],
@@ -46,23 +45,23 @@
     "qHome = C.getJointState()\n",
     "gripper_orig_pos = C.getFrame(\"l_gripper\").getPosition()\n",
     "gripper_orig_quat = C.getFrame(\"l_gripper\").getQuaternion()\n",
-    "print(C.getFrameNames())\n",
+    "# print(C.getFrameNames())\n",
     "\n",
-    "objects = [\"book1\", \"book2\", \"book3\", \"book4\", \"mug\"]"
+    "objects = [\"book1\", \"book2\", \"book3\", \"book4\", \"mug\", \"book-non\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,29 +70,48 @@
     "# reset colors\n",
     "for obj in objects:\n",
     "    C.getFrame(obj).setColor(orig_color)\n",
-    "C.view()"
+    "C.view()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Reset config\n",
+    "# komo = ry.KOMO()\n",
+    "# del komo\n",
+    "# C.setJointState(qHome)\n",
+    "# C.view()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected object:  book4\n",
-      "Object orientation:  vertical\n"
+      "Selected object:  book-non\n",
+      "Object orientation:  horizontal\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "37"
+       "0"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,6 +119,9 @@
    "source": [
     "# select an object randomly\n",
     "curObj = random.choice(objects)\n",
+    "\n",
+    "# curObj = \"book2\"\n",
+    "\n",
     "print(\"Selected object: \", curObj)\n",
     "\n",
     "# color the selected object\n",
@@ -129,31 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Reset config\n",
-    "# komo = ry.KOMO()\n",
-    "# del komo\n",
-    "# C.setJointState(qHome)\n",
-    "# C.view()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +164,10 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +192,7 @@
     "komo.setTiming(1., 10, 5., 0)\n",
     "\n",
     "# add collision constraints\n",
-    "komo.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e1])\n",
+    "komo.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e0])\n",
     "komo.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
     "komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e0], qHome)\n",
     "\n",
@@ -281,7 +278,7 @@
     "        feature=ry.FS.scalarProductYY, \n",
     "        frames=['l_gripper', curObj], \n",
     "        type=ry.OT.eq, \n",
-    "        scale=[1e1],\n",
+    "        scale=[1e2],\n",
     "        target=[1]\n",
     "    )\n",
     "\n",
