Finished q2, lol that was easy

--- a/hw2/hw2_q2.ipynb
+++ b/hw2/hw2_q2.ipynb
@@ -9,23 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
     "import robotic as ry\n",
     "import random\n",
     "import time\n",
-    "max_trials = 10\n",
-    "max_vel = 100\n",
-    "max_acc = max_vel\n",
-    "selected_color = [0, 0, 1]\n",
+    "speed = 0.1\n",
+    "selected_color = [1, 0, 1]\n",
     "orig_color = [0.80, 0.80, 0.80]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Add book_shelf.g"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -47,62 +52,27 @@
     "gripper_orig_quat = C.getFrame(\"l_gripper\").getQuaternion()\n",
     "# print(C.getFrameNames())\n",
     "\n",
-    "objects = [\"book1\", \"book2\", \"book3\", \"book4\", \"mug\", \"book-non\"]"
+    "objects = [\"book1\", \"book2\", \"book3\", \"book4\", \"mug\"]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# reset colors\n",
-    "for obj in objects:\n",
-    "    C.getFrame(obj).setColor(orig_color)\n",
-    "C.view()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Reset config\n",
-    "# komo = ry.KOMO()\n",
-    "# del komo\n",
-    "# C.setJointState(qHome)\n",
-    "# C.view()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "### 2. Randomly select an object + change color of selected obj (to pink)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected object:  book-non\n",
-      "Object orientation:  horizontal\n"
+      "Selected object:  book4\n",
+      "Object orientation:  vertical\n"
      ]
     },
     {
@@ -111,7 +81,7 @@
        "0"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,57 +119,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Robot grasps object in a natural manner - uses the orientation of the object (calulcated in prev part) to determine how to grasp it"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n",
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
+      "{ time: 0.040966, evals: 21, done: 1, feasible: 0, sos: 35.6286, f: 0, ineq: 0, eq: 1.50046 }\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "C.addFrame(\"visual\") .setPosition(C.getFrame(curObj).getPosition()) .setColor([1, 0, 0]) .setShape(ry.ST.marker, [0.5])\n",
-    "# C.addFrame(\"visual_gripper_orig\")  .setShape(ry.ST.marker, [0.]).setPosition(gripper_orig_pos) .setQuaternion(gripper_orig_quat) .setColor([0, 1, 0])\n",
-    "C.addFrame(\"visual_gripper_final\") .setShape(ry.ST.marker, [0.3]) .setPosition(C.getFrame(\"l_gripper\").getPosition()) .setQuaternion(C.getFrame(\"l_gripper\").getQuaternion()) .setColor([0, 0, 0]) \n",
-    "C.view()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# komo = ry.KOMO(C, phases=1, slicesPerPhase=30, kOrder=1, enableCollisions=False)\n",
     "\n",
-    "komo = ry.KOMO()\n",
-    "komo.setConfig(C, True)\n",
-    "komo.setTiming(1., 10, 5., 0)\n",
+    "komo_1 = ry.KOMO()\n",
+    "komo_1.setConfig(C, True)\n",
+    "komo_1.setTiming(1., 10, 5., 0)\n",
     "\n",
     "# add collision constraints\n",
-    "komo.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e0])\n",
-    "komo.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
-    "komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e0], qHome)\n",
+    "komo_1.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e0])\n",
+    "komo_1.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
+    "komo_1.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e0], qHome)\n",
     "\n",
     "# calculate gripper and cargo offset (-40% in x direction)\n",
-    "offset_x = -(C.getFrame(curObj) .getSize()[0] * 0.3)\n",
+    "offset_x = -(C.getFrame(curObj) .getSize()[0] * 0.45)\n",
     "# this objective moves the gripper close to the cargo\n",
-    "komo.addObjective(\n",
+    "komo_1.addObjective(\n",
     "    times=[],\n",
     "    feature=ry.FS.positionRel,\n",
     "    frames=['l_gripper', curObj],\n",
@@ -208,7 +162,7 @@
     "    target=[offset_x, 0, 0]\n",
     ")\n",
     "# this objective makes the gripper claws face the shelf objects \n",
-    "komo.addObjective(\n",
+    "komo_1.addObjective(\n",
     "    times=[0, 1], \n",
     "    feature=ry.FS.scalarProductXZ, \n",
     "    frames=[curObj, 'l_gripper'], \n",
@@ -219,7 +173,7 @@
     "\n",
     "\n",
     "# these 3 objectives align the gripper claws aligned properly with the book\n",
-    "komo.addObjective(\n",
+    "komo_1.addObjective(\n",
     "    times=[0, 1], \n",
     "    feature=ry.FS.scalarProductXX, \n",
     "    frames=['l_gripper', curObj], \n",
@@ -227,7 +181,7 @@
     "    scale=[1e1],\n",
     ")\n",
     "\n",
-    "komo.addObjective(\n",
+    "komo_1.addObjective(\n",
     "    times=[0, 1],\n",
     "    feature=ry.FS.scalarProductZZ, \n",
     "    frames=['l_gripper', curObj], \n",
@@ -235,7 +189,7 @@
     "    scale=[1e1]\n",
     ")\n",
     "\n",
-    "komo.addObjective(\n",
+    "komo_1.addObjective(\n",
     "    times=[0, 1],\n",
     "    feature=ry.FS.scalarProductYY, \n",
     "    frames=['l_gripper', curObj], \n",
@@ -245,18 +199,8 @@
     "\n",
     "# this objective makes the gripper claws vertical\n",
     "\n",
-    "# komo.addObjective(\n",
-    "#     times=[0, 1],\n",
-    "#     feature=ry.FS.scalarProductXY, \n",
-    "#     frames=['l_gripper', curObj], \n",
-    "#     type=ry.OT.eq, \n",
-    "#     scale=[1e1],\n",
-    "#     target=[0]\n",
-    "# )\n",
-    "\n",
-    "\n",
     "if obj_orientation == \"vertical\":\n",
-    "    komo.addObjective(\n",
+    "    komo_1.addObjective(\n",
     "        times=[0, 1],\n",
     "        feature=ry.FS.scalarProductXY, \n",
     "        frames=['l_gripper', curObj], \n",
@@ -265,7 +209,7 @@
     "        target=[1]\n",
     "    )\n",
     "elif obj_orientation == \"horizontal\":\n",
-    "    komo.addObjective(\n",
+    "    komo_1.addObjective(\n",
     "        times=[0, 1],\n",
     "        feature=ry.FS.scalarProductXY, \n",
     "        frames=['l_gripper', curObj], \n",
@@ -273,7 +217,8 @@
     "        scale=[1e1],\n",
     "        target=[0]\n",
     "    )\n",
-    "    komo.addObjective(\n",
+    "    # this objective re-adjusts the gripper claws' z and curObj's x to be parallel, to prevent angled grip(and thus no collision)\n",
+    "    komo_1.addObjective(\n",
     "        times=[0, 1],\n",
     "        feature=ry.FS.scalarProductYY, \n",
     "        frames=['l_gripper', curObj], \n",
@@ -282,29 +227,190 @@
     "        target=[1]\n",
     "    )\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# C.attach('l_gripper', curObj)\n",
-    "\n",
-    "\n",
     "# solve\n",
-    "ret_1 = ry.NLP_Solver(komo.nlp(), verbose=0 ) .solve()\n",
-    "q_gripper_to_obj = komo.getPath()\n",
+    "ret_1 = ry.NLP_Solver(komo_1.nlp(), verbose=0 ) .solve()\n",
+    "print(ret_1)\n",
+    "q_gripper_to_obj = komo_1.getPath()\n",
     "\n",
     "for t in range(q_gripper_to_obj.shape[0]):\n",
     "    C.setJointState(q_gripper_to_obj[t])\n",
     "    C.view(False, f'waypoint {t}')\n",
-    "    time.sleep(0.01)\n",
+    "    time.sleep(speed)\n",
     "\n",
-    "# komo.view_play(False, 2)\n",
+    "# komo_1.view_play(False, 2)\n",
     "\n",
     "# if ret_1.feasible:\n",
     "#     print(\"komo is feasible\")\n",
     "# else:\n",
     "#     print(\"komo is NOT feasible\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Robot places object in goal area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ time: 1.20669, evals: 542, done: 1, feasible: 0, sos: 130.126, f: 0, ineq: 0, eq: 3.16717 }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<robotic._robotic.Frame at 0x7fb76be0a7f0>"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C.attach('l_gripper', curObj)\n",
+    "komo_2 = ry.KOMO()\n",
+    "komo_2.setConfig(C, True)\n",
+    "komo_2.setTiming(1., 10, 5., 0)\n",
+    "\n",
+    "# add collision constraints\n",
+    "komo_2.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e0])\n",
+    "komo_2.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
+    "komo_2.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e0], qHome)\n",
+    "\n",
+    "# this objective moves the gripper close to the goal\n",
+    "komo_2.addObjective(\n",
+    "    times=[],\n",
+    "    feature=ry.FS.positionRel,\n",
+    "    frames=['l_gripper', \"goal\"],\n",
+    "    type=ry.OT.eq,\n",
+    "    scale=[1e1],\n",
+    "    target=[0, 0, 0.1]\n",
+    ")\n",
+    "\n",
+    "komo_2.addObjective(\n",
+    "    times=[],\n",
+    "    feature=ry.FS.scalarProductXZ,\n",
+    "    frames=['l_gripper', \"goal\"],\n",
+    "    type=ry.OT.eq,\n",
+    "    scale=[1e1],\n",
+    "    target=[1]\n",
+    ")\n",
+    "\n",
+    "komo_2.addObjective(\n",
+    "    times=[],\n",
+    "    feature=ry.FS.scalarProductYZ,\n",
+    "    frames=['goal', 'l_gripper'],\n",
+    "    type=ry.OT.eq,\n",
+    "    scale=[1e1],\n",
+    "    target=[-1]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# solve\n",
+    "ret_2 = ry.NLP_Solver(komo_2.nlp(), verbose=0 ) .solve()\n",
+    "print(ret_2)\n",
+    "q_obj_to_goal = komo_2.getPath()\n",
+    "\n",
+    "for t in range(q_obj_to_goal.shape[0]):\n",
+    "    C.setJointState(q_obj_to_goal[t])\n",
+    "    C.view(False, f'waypoint {t}')\n",
+    "    time.sleep(speed)\n",
+    "    \n",
+    "C.getFrame(curObj) .unLink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Robot returns to home position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 378,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C.setJointState(qHome)\n",
+    "C.view()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Misc functions (ignore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 379,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reset colors\n",
+    "for obj in objects:\n",
+    "    C.getFrame(obj).setColor(orig_color)\n",
+    "C.view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# C.addFrame(\"visual\") .setPosition(C.getFrame(\"goal\").getPosition()) .setColor([0, 1, 1]) .setShape(ry.ST.marker, [0.7])\n",
+    "# # C.addFrame(\"visual_gripper_orig\")  .setShape(ry.ST.marker, [0.]).setPosition(gripper_orig_pos) .setQuaternion(gripper_orig_quat) .setColor([0, 1, 0])\n",
+    "# C.addFrame(\"visual_gripper_final\") .setShape(ry.ST.marker, [0.4]) .setPosition(C.getFrame(\"l_gripper\").getPosition()) .setQuaternion(C.getFrame(\"l_gripper\").getQuaternion()) .setColor([0, 1, 0]) \n",
+    "# C.view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 381,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reinitialise komo and arm position\n",
+    "# try:\n",
+    "#     del komo_2\n",
+    "# except:\n",
+    "#     pass\n",
+    "# C.setJointState(q_gripper_to_obj[0])\n",
+    "# C.view()"
    ]
   }
  ],
